# typescript/src/models/ApplicationAuthConfiguration.ts
@@ -1,0 +1,88 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Hathora Cloud API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import type { ApplicationAuthConfigurationGoogle } from './ApplicationAuthConfigurationGoogle';
+import {
+    ApplicationAuthConfigurationGoogleFromJSON,
+    ApplicationAuthConfigurationGoogleFromJSONTyped,
+    ApplicationAuthConfigurationGoogleToJSON,
+} from './ApplicationAuthConfigurationGoogle';
+
+/**
+ * 
+ * @export
+ * @interface ApplicationAuthConfiguration
+ */
+export interface ApplicationAuthConfiguration {
+    /**
+     * 
+     * @type {ApplicationAuthConfigurationGoogle}
+     * @memberof ApplicationAuthConfiguration
+     */
+    google?: ApplicationAuthConfigurationGoogle;
+    /**
+     * Construct a type with a set of properties K of type T
+     * @type {object}
+     * @memberof ApplicationAuthConfiguration
+     */
+    nickname?: object;
+    /**
+     * Construct a type with a set of properties K of type T
+     * @type {object}
+     * @memberof ApplicationAuthConfiguration
+     */
+    anonymous?: object;
+}
+
+/**
+ * Check if a given object implements the ApplicationAuthConfiguration interface.
+ */
+export function instanceOfApplicationAuthConfiguration(value: object): boolean {
+    let isInstance = true;
+
+    return isInstance;
+}
+
+export function ApplicationAuthConfigurationFromJSON(json: any): ApplicationAuthConfiguration {
+    return ApplicationAuthConfigurationFromJSONTyped(json, false);
+}
+
+export function ApplicationAuthConfigurationFromJSONTyped(json: any, ignoreDiscriminator: boolean): ApplicationAuthConfiguration {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'google': !exists(json, 'google') ? undefined : ApplicationAuthConfigurationGoogleFromJSON(json['google']),
+        'nickname': !exists(json, 'nickname') ? undefined : json['nickname'],
+        'anonymous': !exists(json, 'anonymous') ? undefined : json['anonymous'],
+    };
+}
+
+export function ApplicationAuthConfigurationToJSON(value?: ApplicationAuthConfiguration | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'google': ApplicationAuthConfigurationGoogleToJSON(value.google),
+        'nickname': value.nickname,
+        'anonymous': value.anonymous,
+    };
+}
+
