# typescript/src/models/ApplicationAuthConfigurationGoogle.ts
@@ -1,0 +1,66 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Hathora Cloud API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface ApplicationAuthConfigurationGoogle
+ */
+export interface ApplicationAuthConfigurationGoogle {
+    /**
+     * 
+     * @type {string}
+     * @memberof ApplicationAuthConfigurationGoogle
+     */
+    clientId: string;
+}
+
+/**
+ * Check if a given object implements the ApplicationAuthConfigurationGoogle interface.
+ */
+export function instanceOfApplicationAuthConfigurationGoogle(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "clientId" in value;
+
+    return isInstance;
+}
+
+export function ApplicationAuthConfigurationGoogleFromJSON(json: any): ApplicationAuthConfigurationGoogle {
+    return ApplicationAuthConfigurationGoogleFromJSONTyped(json, false);
+}
+
+export function ApplicationAuthConfigurationGoogleFromJSONTyped(json: any, ignoreDiscriminator: boolean): ApplicationAuthConfigurationGoogle {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'clientId': json['clientId'],
+    };
+}
+
+export function ApplicationAuthConfigurationGoogleToJSON(value?: ApplicationAuthConfigurationGoogle | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'clientId': value.clientId,
+    };
+}
+
